--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding-left: 2em;
-  padding-right: 2em;
-  padding-bottom: 0.4em;
+  padding: 0.4em 2em;
   background-color: #171717;
-  /* border-radius: 20px; */
+  width: 100%;
+  max-width: 300px; /* Adjust max-width as needed */
+  box-sizing: border-box;
 }
 
 #heading {
@@ -15,6 +15,7 @@
   color: rgb(0, 255, 200);
   font-size: 1.2em;
 }
+
 .field {
   display: flex;
   align-items: center;
@@ -27,6 +28,8 @@
   color: white;
   background-color: #171717;
   box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .input-icon {
@@ -42,74 +45,52 @@
   width: 100%;
   color: rgb(0, 255, 200);
 }
+
 .form .btn {
   display: flex;
   justify-content: center;
   flex-direction: row;
   margin-top: 2.5em;
 }
-.button1 {
-  padding: 0.5em;
-  padding-left: 1.1em;
-  padding-right: 1.1em;
+
+.button1,
+.button2,
+.button3 {
+  padding: 0.5em 1.1em;
   border-radius: 5px;
-  margin-right: 0.5em;
   border: none;
   outline: none;
   transition: 0.4s ease-in-out;
   background-image: linear-gradient(163deg, #00ff75, #3700ff 100%);
   color: rgb(0, 0, 0);
+  width: 100%;
+  box-sizing: border-box;
 }
 
-.button1:hover {
+.button1:hover,
+.button2:hover,
+.button3:hover {
   background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
   color: rgb(0, 255, 200);
 }
 
-.button2 {
-  padding: 0.5em;
-  padding-left: 2.3em;
-  padding-right: 2.3em;
-  border-radius: 5px;
-  border: none;
-  outline: none;
-  transition: 0.4s ease-in-out;
-  background-image: linear-gradient(163deg, #00ff75, #3700ff 100%);
-  color: rgb(0, 0, 0);
-}
-
-.button2:hover {
-  background-image: linear-gradient(163deg, #00642f 0%, #13034b 100%);
-  color: rgb(0, 255, 200);
-}
-
-.button3 {
-  margin-bottom: 3em;
-  padding: 0.5em;
-  border-radius: 5px;
-  border: none;
-  outline: none;
-  transition: 0.4s ease-in-out;
-  background-image: linear-gradient(163deg, #00ff75, #3700ff 100%);
-  color: rgb(0, 0, 0);
-}
-
-.button3:hover {
-  background-image: linear-gradient(163deg, #a00000fa 0%, #d10050 100%);
-  color: rgb(0, 255, 200);
-}
-
 .card {
-  background-image: linear-gradient (163deg, #00ff75, #3700ff 100%);
+  background-image: linear-gradient(163deg, #00ff75, #3700ff 100%);
   transition: all 0.3s;
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.card:hover {
-  box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.3);
-}
+
 .card2 {
   border-radius: 0;
   transition: all 0.2s;
+  width: 100%;
+  box-sizing: border-box;
 }
+
 .card2:hover {
   transform: scale(0.98);
   border-radius: 20px;
@@ -135,8 +116,7 @@ textarea {
   margin-top: 0.3rem;
 }
 
-/* //Loader */
-
+/* Loader */
 .center {
   display: none;
   justify-content: center;
@@ -153,7 +133,7 @@ textarea {
 .loader div {
   width: 8%;
   height: 24%;
-  background: rgb (128, 128, 128);
+  background: rgb(128, 128, 128);
   position: absolute;
   left: 50%;
   top: 30%;
@@ -171,50 +151,62 @@ textarea {
     opacity: 0.25;
   }
 }
+
 .loader .bar1 {
   transform: rotate(0deg) translate(0, -130%);
   animation-delay: 0s;
 }
+
 .loader .bar2 {
   transform: rotate(30deg) translate(0, -130%);
   animation-delay: -1.1s;
 }
+
 .loader .bar3 {
   transform: rotate(60deg) translate(0, -130%);
   animation-delay: -1s;
 }
+
 .loader .bar4 {
   transform: rotate(90deg) translate(0, -130%);
   animation-delay: -0.9s;
 }
+
 .loader .bar5 {
   transform: rotate(120deg) translate(0, -130%);
   animation-delay: -0.8s;
 }
+
 .loader .bar6 {
   transform: rotate(150deg) translate(0, -130%);
   animation-delay: -0.7s;
 }
+
 .loader .bar7 {
   transform: rotate(180deg) translate(0, -130%);
   animation-delay: -0.6s;
 }
+
 .loader .bar8 {
   transform: rotate(210deg) translate(0, -130%);
   animation-delay: -0.5s;
 }
+
 .loader .bar9 {
   transform: rotate(240deg) translate(0, -130%);
   animation-delay: -0.4s;
 }
+
 .loader .bar10 {
   transform: rotate(270deg) translate(0, -130%);
   animation-delay: -0.3s;
 }
+
 .loader .bar11 {
   transform: rotate(300deg) translate(0, -130%);
   animation-delay: -0.2s;
 }
+
 .loader .bar12 {
   transform: rotate(330deg) translate(0, -130%);
   animation-delay: -0.1s;
